modified footer and header

--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar>
-    <button mat-fab color="warn" aria-label="Example icon button with a home icon">
+    <button mat-fab color="warn" aria-label="Example icon button with a home icon" routerLink="/">
         <mat-icon>home</mat-icon>
     </button>
-    <button style="margin-left: 5px;" mat-raised-button color="warn">Members</button>
-    <span>Congress App</span>
+    <button style="margin-left: 5px;" mat-raised-button color="warn" routerLink="/members">Members</button>
     <span class="example-spacer"></span>
 </mat-toolbar>
