--- a/src/app/components/common/member-card/member-card.component.html
+++ b/src/app/components/common/member-card/member-card.component.html
@@ -1,18 +1,14 @@
-<mat-card class="example-card">
+<mat-card class="example-card" *ngIf="member">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>NAME</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      <mat-card-title>{{member.first_name}} {{member.last_name}}</mat-card-title>
+      <mat-card-subtitle>{{member.current_party === 'R' ? 'Republican' : 'Democrat'}}</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="https://www.pngkey.com/png/detail/22-223848_businessman-vector-person-logo-png.png" alt="Member">
     <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
+
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>DETAIL</button>
+      <button routerLink="/members" mat-button>Back to list</button>
     </mat-card-actions>
   </mat-card>
